force-app/main/default/objects/custom_create73__c/custom_create73__c.object-meta.xml
<CustomObject>
    <label>Custom created object73</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects73</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>