force-app/main/default/objects/custom_create73__c/fields/custom_create_73field595__c.field-meta.xml
<CustomField>
    <fullName>custom_create_73field595__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 73field595</label>
    <type>Checkbox</type>
</CustomField>